fix(multi): add misplaced brackets